@@ -909,7 +909,8 @@
             the remainder of the text on the line is taken as the value.&nbsp; Variables are
             substituted before using the text.&nbsp; After one or more additions to a
             section of the autodoc, a WriteAutodoc command must be used to save the values
-            before closing the file or saving another image to it.</TD>
+            before closing the file or saving another image to it.&nbsp; If no images have 
+            been written yet, the entry will be added to the global section.</TD>
         </TR>
         <TR vAlign="top">
           <TD class="style7">WriteAutodoc</TD>
